--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "countries-list": "^3.1.1",
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
+    "mdbreact": "^4.27.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
