--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@html2canvas/html2canvas": "^1.6.3",
     "@reduxjs/toolkit": "^2.9.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -14,6 +15,7 @@
     "countries-list": "^3.1.1",
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
+    "jspdf": "^3.0.3",
     "mdbreact": "^4.27.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
